--- a/styles/index.css
+++ b/styles/index.css
@@ -2,11 +2,13 @@ body{
     font-family: 'Inter';
     background-color: #1f1f1f;
     color: #fff;
+    transition: 400ms cubic-bezier(0.5, -0.5, 0, 1);
 }
 .trending-body{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width:100vw;
+    transition: 400ms cubic-bezier(0.5, -0.5, 0, 1);
 }
 .trending-header{
     width: 100vw;
@@ -15,6 +17,7 @@ body{
     justify-content: center;
     display: flex;
     font-size: 42px;
+    transition: 400ms cubic-bezier(0.5, -0.5, 0, 1);
 }
 .movie-card{
     width: 230px;
