--- a/styles/movie-details.css
+++ b/styles/movie-details.css
@@ -2,4 +2,73 @@ body{
     font-family: 'Inter';
     background-color: #1f1f1f;
     color: #fff;
+    transition: 400ms cubic-bezier(0.5, -0.5, 0, 1);
+}
+
+.movie-details{
+    display: flex;
+    flex-direction: row;
+    padding: 50px;
+    align-content: end;
+}
+
+.details{
+    width: 640px;
+    margin-left: 50px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+}
+
+.title{
+    font-size: 64px;
+    font-weight: 600;
+}
+
+.subtitle{
+    font-size: 16px;
+    font-weight: 50;
+    color: #8e8e8e;
+    margin: 5px;
+}
+
+.genres{
+    display: flex;
+    flex-direction: row;
+}
+
+.genre-button{
+    box-shadow:  3px 3px 6px #0c0c0c, -3px -3px 6px #323232;
+    transition: 400ms cubic-bezier(0.5, -0.5, 0, 1);
+    width: auto;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 10px;
+    border-radius: 15px;
+}
+
+.genre-button:hover {
+    transform: scale(101%);
+    box-shadow:  6px 6px 12px #0c0c0c,
+             -6px -6px 12px #323232;
+}
+
+.movie-image{
+    width: 350px;
+    height: 500px;
+    position: relative;
+    overflow: hidden;
+    background-color: #fff;
+    border-radius: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    box-shadow:  7px 7px 14px #0c0c0c, -7px -7px 14px #323232;
+    transition: 400ms cubic-bezier(0.5, -0.5, 0, 1);
+}
+.movie-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio */
+    position: absolute; /* Position images absolutely within the card */
 }
